--- a/src/main/angular/ranking/src/app/page/athlete/athlete.component.html
+++ b/src/main/angular/ranking/src/app/page/athlete/athlete.component.html
@@ -1,5 +1,6 @@
 <div>
   {{athlete.name}}
+  <button mat-raised-button color="accent" (click)="showYear('2025')">2025</button>
   <button mat-raised-button color="accent" (click)="showYear('2024')">2024</button>
   <button mat-raised-button color="accent" (click)="showYear('2023')">2023</button>
   <button mat-raised-button color="warn" (click)="import(athlete.swimRankingId)">refresh import</button>
