--- a/src/main/angular/ranking/src/app/dialog/time-details/time-details.component.html
+++ b/src/main/angular/ranking/src/app/dialog/time-details/time-details.component.html
@@ -2,4 +2,6 @@
 
 <p><span class="type">date:</span>{{data.competition.date}}</p>
 <p><span class="type">pool:</span>{{data.competition.course}}</p>
-<p><span class="type">place:</span>{{data.competition.name}}</p>
+<p><span class="type">name:</span>{{data.competition.name}}</p>
+<p><span class="type">place:</span>{{data.competition.city}}</p>
+<p><span class="type">points:</span>{{data.points}}</p>
