--- a/src/main/angular/ranking/src/app/page/athlete/athlete.component.html
+++ b/src/main/angular/ranking/src/app/page/athlete/athlete.component.html
@@ -1,5 +1,5 @@
 <div>
-  {{ athlete.name }}
+  {{ athlete.name }} - {{points}} points
   <button mat-raised-button color="accent" (click)="showYear('2025')">2025</button>
   <button mat-raised-button color="accent" (click)="showYear('2024')">2024</button>
   <button mat-raised-button color="accent" (click)="showYear('2023')">2023</button>
