compute athelete points

--- a/src/main/angular/ranking/src/app/page/athlete/athlete.component.css
+++ b/src/main/angular/ranking/src/app/page/athlete/athlete.component.css
@@ -7,7 +7,12 @@
 .stroke{
 
 }
-
+.points:hover{
+  font-weight: bolder;
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
+}
 .times{
   text-overflow-ellipsis: '...';
 }
